# DevSetup

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
devsetup/: __init__.py  __main__.py
devsetup/cli/: __init__.py  env_info.py  main.py
devsetup/core/: __init__.py  environment_loader.py  plugin_loader.py
devsetup/installers/: __init__.py  base.py  dependency_resolver.py  git.py  manager.py  node.py  pip.py  python.py  result.py  vscode.py
devsetup/system/: __init__.py  command_detector.py  environment_validator.py  os_detector.py  package_manager_detector.py
devsetup/system/package_managers/: __init__.py  apt_manager.py  base.py  brew_manager.py  dnf_manager.py  pacman_manager.py  runner.py  winget_manager.py
devsetup/utils/: __init__.py  logger.py  package_loader.py  prompt.py  version_parser.py
environments/: data-science.json  python.json  web.json
plugins/: README.md
tests/: test_cli.py  test_config.py  test_dependency.py  test_env_info.py  test_installers.py  test_logging.py  test_noninteractive.py  test_summary.py  test_v1_9.py  test_validation.py  test_version.py
