[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "devsetup"
version = "0.0.0"
description = "Automated developer environment setup tool."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

[project.scripts]
devsetup = "devsetup.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["devsetup*"]
